style: change margin buttons and footer proprieties

--- a/index.html
+++ b/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
-<html lang="pt-en">
+<html lang="pt-pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Brave Bikers Garage</title>
+    <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
-        <img class="logo" src="#" alt="logo">
+        <img class="logo" src="#" alt="">
         <div class="flex-container">
-            <div class="tratamentos">
+            <div class="FirstButtom">
                 <a href="https://wa.me/">
                     <h2>Agendamentos</h2>
                 </a>
             </div>
-            <div class="valores">
+            <div class="SecondButtom">
                 <a href="#">
                     <h2>Serviços</h2>
                 </a>
             </div>
-            <div class="marcacoes">
+            <div class="ThirdButtom">
                 <a href="#">
                     <h2>Pedir Orçamento</h2>
                 </a>
             </div>
         </div>
+        <footer>
+            <p>Developed by Helen Bettinelli</p>
+        </footer>
     </main>
 </body>
 </html>
