style: add logo image and adjust responsiveness

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brave Bikers Garage</title>
-    <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="../brave bikers garage/assets/brave-logo-corte.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
-        <img class="logo" src="#" alt="">
+        <img class="logo" src="../brave bikers garage/assets/assinatura.png" alt="">
         <div class="flex-container">
             <div class="FirstButtom">
-                <a href="https://wa.me/">
+                <a href="https://wa.me/351928061102">
                     <h2>Agendamentos</h2>
                 </a>
             </div>
@@ -22,7 +22,7 @@
                 </a>
             </div>
             <div class="ThirdButtom">
-                <a href="#">
+                <a href="https://wa.me/351928061102">
                     <h2>Pedir Orçamento</h2>
                 </a>
             </div>
