fix: change logo file path and favicon

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brave Bikers Garage</title>
-    <link rel="shortcut icon" href="../brave bikers garage/assets/brave-logo-corte.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/brave-logo-corte.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
-        <img class="logo" src="../brave bikers garage/assets/assinatura.png" alt="">
+        <img class="logo" src="assets/assinatura.png" alt="">
         <div class="flex-container">
             <div class="FirstButtom">
                 <a href="https://wa.me/351928061102">
