style: change font-size var

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <img class="logo" src="assets/assinatura.png" alt="">
+        <img class="logo" src="assets/assinatura.png" alt="logo">
         <div class="flex-container">
             <div class="FirstButtom">
                 <a href="https://wa.me/351928061102">
