style: change media queries var

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </a>
             </div>
         </div>
-        <footer>
+        <footer class="tablet">
             <p>Developed by Helen Bettinelli</p>
         </footer>
     </main>
