--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
 <body>
     <main>
         <img class="logo" src="assets/assinatura.png" alt="logo">
-        <div class="flex-container">
+        <div id="google_translate_element" class="flex-container">
             <div class="FirstButtom">
                 <a href="https://wa.me/351928061102">
                     <h2>Agendamentos</h2>
@@ -31,5 +31,8 @@
             <p>Developed by Helen Bettinelli</p>
         </footer>
     </main>
+
+    <script src="//translate.google.co/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
