--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div id="headerButton">
+            <img class="Button" src="assets/back-icon-png.png" alt="botão voltar">
+        </div>
+        <div id="headerButton" >
+            <img class="Button" src="assets/lang-icon.png" alt="botão idioma">
+        </div>
+    </header>
     <main>
         <img class="logo" src="assets/assinatura.png" alt="logo">
         <div id="google_translate_element" class="flex-container">
