refactor: creates file for pages

--- a/pages/servicos/servicos.html
+++ b/pages/servicos/servicos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brave Bikers Garage</title>
     <link rel="shortcut icon" href="assets/brave-logo-corte.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="servicos.css">
 </head>
 <body>
     <header>
@@ -25,12 +25,12 @@
                 </a>
             </div>
             <div class="SecondButtom">
-                <a href="/pages/servicos/servicos.html">
+                <a href="#">
                     <h2>Serviços sem marcação</h2>
                 </a>
             </div>
             <div class="ThirdButtom">
-                <a href="/pages/revisoes/revisoes.html">
+                <a href="#">
                     <h2>Revisões</h2>
                 </a>
             </div>
