build: creates pages "serviços" and "revisões"

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                     <h2>Revisões</h2>
                 </a>
             </div>
-            <div class="forthButtom">
+            <!-- <div class="forthButtom">
                 <a href="https://wa.me/351928061102">
                     <h2>Orçamentos</h2>
                 </a>
-            </div>
+            </div> -->
         </div>
         <footer class="tablet">
             <p>Developed by Helen Bettinelli</p>
