--- a/pages/revisoes/revisoes.html
+++ b/pages/revisoes/revisoes.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-Pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Revisões</title>
+    <title>Brave Bikers Garage</title>
+    <link rel="shortcut icon" href="assets/brave-logo-corte.jpg" type="image/x-icon">
     <link rel="stylesheet" href="revisoes.css">
 </head>
 <body>
-    
+    <header>
+        <div id="headerButton">
+            <img class="Button" src="assets/back-icon-png.png" alt="botão voltar">
+        </div>
+        <div id="headerButton" >
+            <img class="Button" src="assets/lang-icon.png" alt="botão idioma">
+        </div>
+    </header>
+    <main>
+        <img class="logo" src="assets/assinatura.png" alt="logo">
+        <div id="google_translate_element" class="flex-container">
+            <div class="FirstButtom">
+                <a href="https://wa.me/351928061102">
+                    <h2>Marcações</h2>
+                </a>
+            </div>
+            <div class="SecondButtom">
+                <a href="/pages/servicos/servicos.html">
+                    <h2>Serviços sem marcação</h2>
+                </a>
+            </div>
+            <div class="ThirdButtom">
+                <a href="/pages/revisoes/revisoes.html">
+                    <h2>Revisões</h2>
+                </a>
+            </div>
+            <div class="forthButtom">
+                <a href="https://wa.me/351928061102">
+                    <h2>Orçamentos</h2>
+                </a>
+            </div>
+        </div>
+        <footer class="tablet">
+            <p>Developed by Helen Bettinelli</p>
+        </footer>
+    </main>
+
+    <script src="//translate.google.co/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
