--- a/pages/servicos/servicos.html
+++ b/pages/servicos/servicos.html
@@ -4,39 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brave Bikers Garage</title>
-    <link rel="shortcut icon" href="assets/brave-logo-corte.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/brave-logo-corte.jpg" type="image/x-icon">
     <link rel="stylesheet" href="servicos.css">
 </head>
 <body>
     <header>
         <div id="headerButton">
-            <img class="Button" src="assets/back-icon-png.png" alt="botão voltar">
+            <img class="Button" src="/assets/back-icon-png.png" alt="botão voltar">
         </div>
         <div id="headerButton" >
-            <img class="Button" src="assets/lang-icon.png" alt="botão idioma">
+            <img class="Button" src="/assets/lang-icon.png" alt="botão idioma">
         </div>
     </header>
     <main>
-        <img class="logo" src="assets/assinatura.png" alt="logo">
+        <img class="logo" src="/assets/assinatura.png" alt="logo">
+
+        <h1>Serviços sem marcação</h1>
+
         <div id="google_translate_element" class="flex-container">
             <div class="FirstButtom">
                 <a href="https://wa.me/351928061102">
-                    <h2>Marcações</h2>
+                    <h2>Troca de óleo do motor</h2>
                 </a>
             </div>
             <div class="SecondButtom">
                 <a href="#">
-                    <h2>Serviços sem marcação</h2>
+                    <h2>Troca de pneus</h2>
                 </a>
             </div>
             <div class="ThirdButtom">
                 <a href="#">
-                    <h2>Revisões</h2>
+                    <h2>Troca do filtro de ar</h2>
                 </a>
             </div>
             <div class="forthButtom">
                 <a href="https://wa.me/351928061102">
-                    <h2>Orçamentos</h2>
+                    <h2>Troca de pastilhas de travão</h2>
                 </a>
             </div>
         </div>
