--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div id="headerButton">
-            <img class="Button" src="assets/back-icon-png.png" alt="botão voltar">
+            <img id="buttonBack" class="Button" src="assets/back-icon-png.png" alt="botão voltar">
         </div>
         <div id="headerButton" >
             <img class="Button" src="assets/lang-icon.png" alt="botão idioma">
