build: creates translate pages. style: changes font-weight and add h1

--- a/pages/servicos/servicosPt.html
+++ b/pages/servicos/servicosPt.html
@@ -9,31 +9,29 @@
 </head>
 <body>
     <header>
-        <div id="headerButton">
-            <img class="Button" src="/assets/back-icon-png.png" alt="botão voltar">
+        <div class="headerButton">
+            <img id="buttonBack" class="Button" src="../../assets/back-icon-png.png" alt="botão voltar">
         </div>
-        <div id="headerButton" >
-            <img class="Button" src="/assets/lang-icon.png" alt="botão idioma">
+        <div class="headerButton" >
+            <img id="buttonLang" class="Button" src="../../assets/lang-icon.png" alt="botão idioma">
         </div>
     </header>
     <main>
         <img class="logo" src="/assets/assinatura.png" alt="logo">
-
         <h1>Serviços sem marcação</h1>
-
-        <div id="google_translate_element" class="flex-container">
+        <div class="flex-container">
             <div class="FirstButtom">
                 <a href="https://wa.me/351928061102">
                     <h2>Troca de óleo do motor</h2>
                 </a>
             </div>
             <div class="SecondButtom">
-                <a href="#">
+                <a href="https://wa.me/351928061102">
                     <h2>Troca de pneus</h2>
                 </a>
             </div>
             <div class="ThirdButtom">
-                <a href="#">
+                <a href="https://wa.me/351928061102">
                     <h2>Troca do filtro de ar</h2>
                 </a>
             </div>
@@ -43,12 +41,10 @@
                 </a>
             </div>
         </div>
-        <footer class="tablet">
+        <footer>
             <p>Developed by Helen Bettinelli</p>
         </footer>
     </main>
-
-    <script src="//translate.google.co/translate_a/element.js?cb=googleTranslateElementInit"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
