build: add button interactions

--- a/indexPt.html
+++ b/indexPt.html
@@ -4,48 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brave Bikers Garage</title>
-    <link rel="shortcut icon" href="assets/brave-logo-corte.jpg" type="image/x-icon"/>
+    <link
+      rel="shortcut icon"
+      href="assets/brave-logo-corte.jpg"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <div class="headerButton">
+      <a href="#" class="headerButton">
         <img
-          id="buttonBack"class="Button" src="assets/back-icon-png.png" alt="botão voltar"
+          id="buttonBack"
+          src="assets/back-icon-png.png"
+          alt="botão voltar"
         />
-      </div>
-      <div class="headerButton">
-        <img
-          id="buttonLang" class="Button" src="assets/lang-icon.png" alt="botão idioma"/>
-      </div>
+      </a>
+      <a href="indexEn.html" target="_self" class="headerButton">
+        <img id="buttonLang" src="assets/lang-icon.png" alt="botão idioma" />
+      </a>
     </header>
     <main>
-        <img class="logo" src="assets/assinatura.png" alt="logo" />
-        <div class="flex-container">
-          <div class="FirstButtom">
-            <a href="https://wa.me/351928061102">
-              <h2>Marcações</h2>
-            </a>
-          </div>
-          <div class="SecondButtom">
-            <a href="/pages/servicos/servicosPt.html">
-              <h2>Serviços sem marcação</h2>
-            </a>
-          </div>
-          <div class="ThirdButtom">
-            <a href="https://wa.me/351928061102">
-              <h2>Revisões</h2>
-            </a>
-          </div>
-          <div class="forthButtom">
-            <a href="https://wa.me/351928061102">
-              <h2>Orçamentos</h2>
-            </a>
-          </div>
-        </div>
-        <footer>
-          <p>Desenvovido por Helen Bettinelli</p>
-        </footer>
+      <img class="logo" src="assets/assinatura.png" alt="logo" />
+      <div class="flex-container">
+        <a href="https://wa.me/351928061102" class="FirstButtom">
+          <h2>Marcações</h2>
+        </a>
+        <a href="/pages/servicos/servicosPt.html" class="SecondButtom">
+          <h2>Serviços sem marcação</h2>
+        </a>
+        <a href="https://wa.me/351928061102" class="ThirdButtom">
+          <h2>Revisões</h2>
+        </a>
+        <a href="https://wa.me/351928061102" class="forthButtom">
+          <h2>Orçamentos</h2>
+        </a>
+      </div>
+      <footer>
+        <p>Desenvolvido por Helen Bettinelli</p>
+      </footer>
     </main>
     <script src="script.js"></script>
   </body>
