--- a/pages/servicos/servicosEn.html
+++ b/pages/servicos/servicosEn.html
@@ -9,37 +9,29 @@
 </head>
 <body>
     <header>
-        <div id="headerButton">
-            <img id="buttonBack" class="Button" src="assets/back-icon-png.png" alt="botão voltar">
-        </div>
-        <div id="headerButton">
-            <img id="buttonLang" class="Button" src="assets/lang-icon.png" alt="botão idioma">
-        </div>
+        <a href="/indexEn.html" target="_self" class="headerButton">
+            <img id="buttonBack" class="Button" src="../../assets/back-icon-png.png" alt="botão voltar">
+        </a>
+        <a href="./servicosPt.html" target="_self" class="headerButton">
+            <img id="buttonLang" class="Button" src="../../assets/lang-icon.png" alt="botão idioma">
+        </a>
     </header>
     <main>
         <img class="logo" src="/assets/assinatura.png" alt="logo">
         <h1>Services without an appointment</h1>
         <div class="flex-container">
-            <div class="FirstButtom">
-                <a href="https://wa.me/351928061102">
-                    <h2>Engine oil change</h2>
-                </a>
-            </div>
-            <div class="SecondButtom">
-                <a href="https://wa.me/351928061102">
-                    <h2>Tire change</h2>
-                </a>
-            </div>
-            <div class="ThirdButtom">
-                <a href="https://wa.me/351928061102">
-                    <h2>Changing the air filter</h2>
-                </a>
-            </div>
-            <div class="forthButtom">
-                <a href="https://wa.me/351928061102">
-                    <h2>Changing brake pads</h2>
-                </a>
-            </div>
+            <a href="https://wa.me/351928061102" class="FirstButtom">
+                <h2>Engine oil change</h2>
+            </a>
+            <a href="https://wa.me/351928061102" class="SecondButtom">
+                <h2>Tire change</h2>
+            </a>
+            <a href="https://wa.me/351928061102" class="ThirdButtom">
+                <h2>Changing the air filter</h2>
+            </a>
+            <a href="https://wa.me/351928061102" class="forthButtom">
+                <h2>Changing brake pads</h2>
+            </a>
         </div>
         <footer>
             <p>Developed by Helen Bettinelli</p>
