--- a/pages/servicos/servicosPt.html
+++ b/pages/servicos/servicosPt.html
@@ -1,50 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt-Pt">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brave Bikers Garage</title>
-    <link rel="shortcut icon" href="/assets/brave-logo-corte.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="servicos.css">
-</head>
-<body>
+    <link
+      rel="shortcut icon"
+      href="/assets/brave-logo-corte.jpg"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="servicos.css" />
+  </head>
+  <body>
     <header>
-        <div class="headerButton">
-            <img id="buttonBack" class="Button" src="../../assets/back-icon-png.png" alt="botão voltar">
-        </div>
-        <div class="headerButton" >
-            <img id="buttonLang" class="Button" src="../../assets/lang-icon.png" alt="botão idioma">
-        </div>
+      <a href="/indexPt.html" target="_self" class="headerButton">
+        <img
+          id="buttonBack"
+          class="Button"
+          src="../../assets/back-icon-png.png"
+          alt="botão voltar"
+        />
+      </a>
+      <a href="servicosEn.html" target="_self" class="headerButton">
+        <img
+          id="buttonLang"
+          class="Button"
+          src="../../assets/lang-icon.png"
+          alt="botão idioma"
+        />
+      </a>
     </header>
     <main>
-        <img class="logo" src="/assets/assinatura.png" alt="logo">
-        <h1>Serviços sem marcação</h1>
-        <div class="flex-container">
-            <div class="FirstButtom">
-                <a href="https://wa.me/351928061102">
-                    <h2>Troca de óleo do motor</h2>
-                </a>
-            </div>
-            <div class="SecondButtom">
-                <a href="https://wa.me/351928061102">
-                    <h2>Troca de pneus</h2>
-                </a>
-            </div>
-            <div class="ThirdButtom">
-                <a href="https://wa.me/351928061102">
-                    <h2>Troca do filtro de ar</h2>
-                </a>
-            </div>
-            <div class="forthButtom">
-                <a href="https://wa.me/351928061102">
-                    <h2>Troca de pastilhas de travão</h2>
-                </a>
-            </div>
-        </div>
-        <footer>
-            <p>Developed by Helen Bettinelli</p>
-        </footer>
+      <img class="logo" src="/assets/assinatura.png" alt="logo" />
+      <h1>Serviços sem marcação</h1>
+      <div class="flex-container">
+        <a href="https://wa.me/351928061102" class="FirstButtom">
+          <h2>Troca de óleo do motor</h2>
+        </a>
+        <a href="https://wa.me/351928061102" class="SecondButtom">
+          <h2>Troca de pneus</h2>
+        </a>
+        <a href="https://wa.me/351928061102" class="ThirdButtom">
+          <h2>Troca do filtro de ar</h2>
+        </a>
+        <a href="https://wa.me/351928061102" class="forthButtom">
+          <h2>Troca de pastilhas de travão</h2>
+        </a>
+      </div>
+      <footer>
+        <p>Desenvolvido por Helen Bettinelli</p>
+      </footer>
     </main>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
