fix: arrange file structures

--- a/indexPt.html
+++ b/indexPt.html
@@ -20,7 +20,7 @@
           alt="botão voltar"
         />
       </a>
-      <a href="indexEn.html" target="_self" class="headerButton">
+      <a href="./pages/indexEn.html" target="_self" class="headerButton">
         <img id="buttonLang" src="assets/lang-icon.png" alt="botão idioma" />
       </a>
     </header>
