--- a/pages/servicos/servicosEn.html
+++ b/pages/servicos/servicosEn.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="/indexEn.html" target="_self" class="headerButton">
+        <a href="/pages/indexEn.html" target="_self" class="headerButton">
             <img id="buttonBack" class="Button" src="../../assets/back-icon-png.png" alt="botão voltar">
         </a>
         <a href="./servicosPt.html" target="_self" class="headerButton">
