--- a/pages/indexEn.html
+++ b/pages/indexEn.html
@@ -21,7 +21,7 @@
           alt="botão voltar"
         />
       </a>
-      <a href="indexPt.html" target="_self" class="headerButton">
+      <a href="../indexPt.html" target="_self" class="headerButton">
         <img
           id="buttonLang"
           class="Button"
