fix: arrange file positions

--- a/indexPt.html
+++ b/indexPt.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brave Bikers Garage</title>
-    <link
-      rel="shortcut icon"
-      href="assets/brave-logo-corte.jpg"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="assets/brave-logo-corte.jpg" type="image/x-icon"/>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -16,16 +12,16 @@
       <a href="#" class="headerButton">
         <img
           id="buttonBack"
-          src="assets/back-icon-png.png"
+          src="./assets/back-icon-png.png"
           alt="botão voltar"
         />
       </a>
       <a href="./pages/indexEn.html" target="_self" class="headerButton">
-        <img id="buttonLang" src="assets/lang-icon.png" alt="botão idioma" />
+        <img id="buttonLang" src="./assets/lang-icon.png" alt="botão idioma" />
       </a>
     </header>
     <main>
-      <img class="logo" src="assets/assinatura.png" alt="logo" />
+      <img class="logo" src="./assets/assinatura.png" alt="logo" />
       <div class="flex-container">
         <a href="https://wa.me/351928061102" class="FirstButtom">
           <h2>Marcações</h2>
