--- a/pages/indexEn.html
+++ b/pages/indexEn.html
@@ -6,10 +6,10 @@
     <title>Brave Bikers Garage</title>
     <link
       rel="shortcut icon"
-      href="assets/brave-logo-corte.jpg"
+      href="../assets/brave-logo-corte.jpg"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <header>
@@ -17,7 +17,7 @@
         <img
           id="buttonBack"
           class="Button"
-          src="assets/back-icon-png.png"
+          src="../assets/back-icon-png.png"
           alt="botão voltar"
         />
       </a>
@@ -25,13 +25,13 @@
         <img
           id="buttonLang"
           class="Button"
-          src="assets/lang-icon.png"
+          src="../assets/lang-icon.png"
           alt="botão idioma"
         />
       </a>
     </header>
     <main>
-      <img class="logo" src="assets/assinatura.png" alt="logo" />
+      <img class="logo" src="../assets/assinatura.png" alt="logo" />
       <div class="flex-container">
         <a href="https://wa.me/351928061102" class="FirstButtom">
           <h2>Appointments</h2>
