--- a/pages/servicos/servicosPt.html
+++ b/pages/servicos/servicosPt.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <a href="/indexPt.html" target="_self" class="headerButton">
+      <a href="/index.html" target="_self" class="headerButton">
         <img
           id="buttonBack"
           class="Button"
