--- a/pages/servicos/servicosEn.html
+++ b/pages/servicos/servicosEn.html
@@ -12,7 +12,7 @@
         <a href="/pages/indexEn.html" target="_self" class="headerButton">
             <img id="buttonBack" class="Button" src="../../assets/back-icon-png.png" alt="botão voltar">
         </a>
-        <a href="./servicosPt.html" target="_self" class="headerButton">
+        <a href="./servicos.html" target="_self" class="headerButton">
             <img id="buttonLang" class="Button" src="../../assets/lang-icon.png" alt="botão idioma">
         </a>
     </header>
