fix: arranged file order

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
       <a href="#" class="headerButton">
         <img
           id="buttonBack"
-          src="./assets/back-icon-png.png"
+          src="/assets/back-icon-png.png"
           alt="botão voltar"
         />
       </a>
-      <a href="./pages/indexEn.html" target="_self" class="headerButton">
-        <img id="buttonLang" src="./assets/lang-icon.png" alt="botão idioma" />
+      <a href="/pages/indexEn.html" target="_self" class="headerButton">
+        <img id="buttonLang" src="/assets/lang-icon.png" alt="botão idioma" />
       </a>
     </header>
     <main>
-      <img class="logo" src="./assets/assinatura.png" alt="logo" />
+      <img class="logo" src="/assets/assinatura.png" alt="logo" />
       <div class="flex-container">
         <a href="https://wa.me/351928061102" class="FirstButtom">
           <h2>Marcações</h2>
