--- a/pages/indexEn.html
+++ b/pages/indexEn.html
@@ -6,7 +6,7 @@
     <title>Brave Bikers Garage</title>
     <link
       rel="shortcut icon"
-      href="../assets/brave-logo-corte.jpg"
+      href="/assets/brave-logo-corte.jpg"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="/style.css" />
@@ -17,26 +17,26 @@
         <img
           id="buttonBack"
           class="Button"
-          src="../assets/back-icon-png.png"
+          src="/assets/back-icon-png.png"
           alt="botão voltar"
         />
       </a>
-      <a href="../index.html" target="_self" class="headerButton">
+      <a href="/index.html" target="_self" class="headerButton">
         <img
           id="buttonLang"
           class="Button"
-          src="../assets/lang-icon.png"
+          src="/assets/lang-icon.png"
           alt="botão idioma"
         />
       </a>
     </header>
     <main>
-      <img class="logo" src="../assets/assinatura.png" alt="logo" />
+      <img class="logo" src="/assets/assinatura.png" alt="logo" />
       <div class="flex-container">
         <a href="https://wa.me/351928061102" class="FirstButtom">
           <h2>Appointments</h2>
         </a>
-        <a href="/pages/servicos/servicosEn.html" class="SecondButtom">
+        <a href="/pages/servicosEn.html" class="SecondButtom">
           <h2>Services without an appointment</h2>
         </a>
         <a href="https://wa.me/351928061102" class="ThirdButtom">
