--- a/pages/servicosEn.html
+++ b/pages/servicosEn.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brave Bikers Garage</title>
     <link rel="shortcut icon" href="/assets/brave-logo-corte.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="servicos.css">
+    <link rel="stylesheet" href="/pages/servicos.css">
 </head>
 <body>
     <header>
         <a href="/pages/indexEn.html" target="_self" class="headerButton">
-            <img id="buttonBack" class="Button" src="../../assets/back-icon-png.png" alt="botão voltar">
+            <img id="buttonBack" class="Button" src="/assets/back-icon-png.png" alt="botão voltar">
         </a>
-        <a href="./servicos.html" target="_self" class="headerButton">
-            <img id="buttonLang" class="Button" src="../../assets/lang-icon.png" alt="botão idioma">
+        <a href="/pages/servicosPt.html" target="_self" class="headerButton">
+            <img id="buttonLang" class="Button" src="/assets/lang-icon.png" alt="botão idioma">
         </a>
     </header>
     <main>
