--- a/pages/servicosPt.html
+++ b/pages/servicosPt.html
@@ -9,7 +9,7 @@
       href="/assets/brave-logo-corte.jpg"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="servicos.css" />
+    <link rel="stylesheet" href="/pages/servicos.css" />
   </head>
   <body>
     <header>
@@ -17,15 +17,15 @@
         <img
           id="buttonBack"
           class="Button"
-          src="../../assets/back-icon-png.png"
+          src="/assets/back-icon-png.png"
           alt="botão voltar"
         />
       </a>
-      <a href="servicosEn.html" target="_self" class="headerButton">
+      <a href="/pages/servicosEn.html" target="_self" class="headerButton">
         <img
           id="buttonLang"
           class="Button"
-          src="../../assets/lang-icon.png"
+          src="/assets/lang-icon.png"
           alt="botão idioma"
         />
       </a>
