fix: changed link om a tag in line 29

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="https://wa.me/351928061102" class="FirstButtom">
           <h2>Marcações</h2>
         </a>
-        <a href="/pages/servicos/servicosPt.html" class="SecondButtom">
+        <a href="/pages/servicosPt.html" class="SecondButtom">
           <h2>Serviços sem marcação</h2>
         </a>
         <a href="https://wa.me/351928061102" class="ThirdButtom">
