style: added h5 on pages with language information

--- a/index.html
+++ b/index.html
@@ -10,13 +10,10 @@
   <body>
     <header>
       <a href="#" class="headerButton">
-        <img
-          id="buttonBack"
-          src="/assets/back-icon-png.png"
-          alt="botão voltar"
-        />
+        <img id="buttonBack"src="/assets/back-icon-png.png" alt="botão voltar"/>
       </a>
       <a href="/pages/indexEn.html" target="_self" class="headerButton">
+        <h5>PT-EN</h5>
         <img id="buttonLang" src="/assets/lang-icon.png" alt="botão idioma" />
       </a>
     </header>
